Actions
Bug #10388
closedbofi: NULL pointer errors
Start date:
2019-02-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
In file included from ../../common/sys/param.h:48:0, from ../../common/sys/sysmacros.h:37, from ../../common/io/bofi.c:31: ../../common/io/bofi.c: In function 'bofi_attach': ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/bofi.c:628:19: note: in expansion of macro 'NULL' DDI_PSEUDO, NULL) == DDI_FAILURE) ^~~~ In file included from ../../common/io/bofi.c:46:0: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ ../../common/io/bofi.c: In function 'bofi_post_event': ../../common/io/bofi.c:4481:32: error: comparison between pointer and integer [-Werror] if ((ep->errstate.msg_time == NULL || ^~ ../../common/io/bofi.c: In function 'bofi_fm_ereport_callback': ../../common/io/bofi.c:4538:30: error: comparison between pointer and integer [-Werror] if (ep->errstate.msg_time != NULL) ^~ cc1: all warnings being treated as errors
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 5c2def1fe977ee8010f1f89bb168ad7e84802013
commit 5c2def1fe977ee8010f1f89bb168ad7e84802013 Author: Toomas Soome <tsoome@me.com> Date: 2019-02-16T08:03:02.000Z 10388 bofi: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions