10388 bofi: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Robert Mustacchi <rm@joyent.com>